--- a/templates/index.html
+++ b/templates/index.html
@@ -231,7 +231,7 @@
                 <button class="btn btn-show" onclick="handleAction('show_last_30_log_entries')">Show Last 30 Log Entries</button>
             </div>
             <div class="action-group">
-                <button class="btn btn-show" onclick="handleAction('show_login_attempts')">Show Login Attempts</button>
+                <button class="btn btn-show" onclick="handleAction('show_login_attempts')">Show entire log file</button>
             </div>
             <div class="action-group">
                 <button class="btn btn-show" onclick="handleAction('generate_logins_report')">Generate logins report</button>
