--- a/templates/index.html
+++ b/templates/index.html
@@ -8,10 +8,14 @@
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
+            background-color: #f4f4f4;
+            color: #333;
             text-align: center;
         }
         h1 {
             text-align: center;
+            color: #007bff;
+            font-size: 2.5em;
         }
         .button-group {
             display: flex;
@@ -25,6 +29,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            margin: 10px;
         }
         .btn {
             padding: 10px 20px;
@@ -33,32 +38,40 @@
             font-size: 14px;
             cursor: pointer;
             border-radius: 5px;
-            transition: background-color 0.3s;
+            transition: background-color 0.3s, transform 0.3s, box-shadow 0.3s;
             display: block;
         }
         .btn:hover {
-            opacity: 1;
             background-color: #333;
             box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+            transform: scale(1.05);
         }
         .btn:active {
             transform: scale(0.95);
         }
-		.btn-show {
+        .btn-show {
             background-color: #007bff;
             color: white;
-		}
+        }
+        .btn-logging {
+            background-color: #ff5722; /* Orange */
+            color: black;
+        }
         .btn-action {
             background-color: #28a745;
+            color: white;
+        }
+        .btn-sshd {
+            background-color: #000;
+            color: white;
+        }
+        .btn-gdm {
+            background-color: #800080; /* Purple */
             color: white;
         }
         .btn-log {
             background-color: #ff5722; /* Orange */
             color: black;
-        }
-        .btn-sshd {
-            background-color: #000; /* Black */
-            color: white;
         }
         .section-title {
             font-size: 18px;
@@ -94,14 +107,14 @@
             box-sizing: border-box;
         }
         .console-frame {
-            width: 80%;
+            width: 100%;
             border: 3px solid #333;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
             margin-top: 20px;
             background-color: #000;
+            text-align: left; /* Ensure console frame is aligned left */
         }
-
         .console {
             background-color: #000;
             color: #fff;
@@ -110,7 +123,8 @@
             overflow: auto;
             white-space: pre-wrap;
             font-family: 'Courier New', Courier, monospace;
-            height: 400px;
+            height: 520px;
+            text-align: left; /* Ensure console text is aligned left */
         }
         .action-group {
             margin-bottom: 20px;
@@ -154,26 +168,26 @@
             }
         }
 
-        async function fetchSSHDData(action) {
+        async function fetchDaemonData(action, daemon) {
             const commands = {
-                'sshd_status': 'status',
-                'sshd_start': 'start',
-                'sshd_stop': 'stop',
-                'sshd_restart': 'restart'
+                'status': 'status',
+                'start': 'start',
+                'stop': 'stop',
+                'restart': 'restart'
             };
 
             if (!commands[action]) {
-                document.getElementById('output').innerText = 'Invalid SSHD command';
+                document.getElementById('output').innerText = `Invalid ${daemon.toUpperCase()} command`;
                 return;
             }
 
             const command = commands[action];
             try {
-                // Execute the primary SSHD command
-                await postData('sshd', { command });
+                // Execute the primary daemon command
+                await postData(daemon, { command });
 
-                // Fetch and display the content of sshd_status.log
-                const response = await fetch('/api/sshd_status_log');
+                // Fetch and display the content of the status log
+                const response = await fetch(`/api/${daemon}_status_log`);
                 const text = await response.text();
                 document.getElementById('output').innerText = text;
             } catch (error) {
@@ -187,7 +201,9 @@
             const denyValue = parseInt(document.getElementById('deny_value').value);
 
             if (action.startsWith('sshd_')) {
-                fetchSSHDData(action);
+                fetchDaemonData(action.replace('sshd_', ''), 'sshd');
+            } else if (action.startsWith('gdm_')) {
+                fetchDaemonData(action.replace('gdm_', ''), 'gdm');
             } else if (action === 'unlock') {
                 if (Number.isInteger(unlockTime)) {
                     postData(action, { unlock_time: unlockTime });
@@ -200,8 +216,6 @@
                 } else {
                     document.getElementById('output').innerText = 'Error: deny_value must be an integer';
                 }
-            } else if (action === 'allow_even_deny_root' || action === 'deny_even_deny_root') {
-                postData(action, {});
             } else {
                 fetchData(action, user);
             }
@@ -212,7 +226,7 @@
     <h1>PAM FAILLOCK WEB API</h1>
     <div class="button-group">
         <div class="column">
-            <div class="section-title">Vizualization Commands</div>
+            <div class="section-title">PAM files</div>
             <div class="action-group">
                 <button class="btn btn-show" onclick="handleAction('show_faillock_all_users')">Show faillock for All Users</button>
             </div>
@@ -227,49 +241,51 @@
             <div class="action-group">
                 <button class="btn btn-show" onclick="handleAction('show_deny_value')">Show Failed attempts value</button>
             </div>
+         </div>
+         <div class="column">
+			<div class="section-title">Logging and reporting</div>
             <div class="action-group">
-                <button class="btn btn-show" onclick="handleAction('show_last_30_log_entries')">Show Last 30 Log Entries</button>
+                <button class="btn btn-logging" onclick="handleAction('show_last_30_log_entries')">Show Last 30 Log Entries</button>
             </div>
             <div class="action-group">
-                <button class="btn btn-show" onclick="handleAction('show_login_attempts')">Show entire log file</button>
+                <button class="btn btn-logging" onclick="handleAction('show_login_attempts')">Show entire log file</button>
             </div>
             <div class="action-group">
-                <button class="btn btn-show" onclick="handleAction('generate_logins_report')">Generate logins report</button>
+                <button class="btn btn-logging" onclick="handleAction('generate_logins_report')">Generate logins report</button>
             </div>
         </div>
         <div class="column">
             <div class="section-title">Actions</div>
             <div class="action-group">
-                <button class="btn btn-action" onclick="handleAction('unlock')">Set Unlock timer</button>
+                <button class="btn btn-action" onclick="handleAction('unlock')">Set lock time value</button>
+                <input type="number" id="unlock_time" name="unlock_time" placeholder="Unlock time (integer)">
             </div>
             <div class="action-group">
-                <label for="unlock_time">Enter unlock time (e.g., 120 for 2 minutes):</label>
-                <input type="text" id="unlock_time" name="unlock_time">
-            </div>
-            <div class="action-group">
-                <button class="btn btn-action" onclick="handleAction('deny')">Set failed attempts</button>
-            </div>
-            <div class="action-group">
-                <label for="deny_value">Enter the amount of failed attempts for account lockout:</label>
-                <input type="text" id="deny_value" name="deny_value">
+                <button class="btn btn-action" onclick="handleAction('deny')">Set failed attempts value</button>
+                <input type="number" id="deny_value" name="deny_value" placeholder="Deny value (integer)">
             </div>
         </div>
         <div class="column">
-            <div class="section-title">SSHD Commands</div>
+            <div class="section-title">SSHD Daemon</div>
             <div class="action-group">
                 <button class="btn btn-sshd" onclick="handleAction('sshd_status')">SSHD Status</button>
+                <button class="btn btn-sshd" onclick="handleAction('sshd_start')">Start SSHD</button>
+                <button class="btn btn-sshd" onclick="handleAction('sshd_stop')">Stop SSHD</button>
+                <button class="btn btn-sshd" onclick="handleAction('sshd_restart')">Restart SSHD</button>
             </div>
+        </div>
+        <div class="column">
+	        <div class="section-title">GDM Daemon</div>
             <div class="action-group">
-                <button class="btn btn-sshd" onclick="handleAction('sshd_start')">SSHD Start</button>
-            </div>
-            <div class="action-group">
-                <button class="btn btn-sshd" onclick="handleAction('sshd_stop')">SSHD Stop</button>
-            </div>
-            <div class="action-group">
-                <button class="btn btn-sshd" onclick="handleAction('sshd_restart')">SSHD Restart</button>
+                <button class="btn btn-gdm" onclick="handleAction('gdm_status')">GDM Status</button>
+                <button class="btn btn-gdm" onclick="handleAction('gdm_start')">Start GDM</button>
+                <button class="btn btn-gdm" onclick="handleAction('gdm_stop')">Stop GDM</button>
+                <button class="btn btn-gdm" onclick="handleAction('gdm_restart')">Restart GDM</button>
             </div>
         </div>
     </div>
-    <pre id="output"></pre>
+    <div class="console-frame">
+        <pre id="output" class="console">Output will appear here...</pre>
+    </div>
 </body>
 </html>
