--- a/templates/index.html
+++ b/templates/index.html
@@ -137,12 +137,13 @@
         }
     </style>
     <script>
-        async function fetchData(action, user = '', unlockTime = '', denyValue = '') {
+        async function fetchData(action, user = '', unlock_a_user= '', unlockTime = '', denyValue = '') {
             let url = `/api/${action}`;
-            if (action === 'show_faillock_specific_user') {
+            if (action === 'show_all_user_lockouts') {
                 url += `?user=${encodeURIComponent(user)}`;
-            }
-
+            } else if (action === 'unlock_user') {
+                url += `?unlock_a_user=${encodeURIComponent(unlock_a_user)}`;
+			}
             try {
                 const response = await fetch(url);
                 const text = await response.text();
@@ -151,6 +152,7 @@
                 document.getElementById('output').innerText = 'Error: ' + error.message;
             }
         }
+        
 
         async function postData(action, data) {
             try {
@@ -197,8 +199,11 @@
 
         function handleAction(action) {
             const user = document.getElementById('user').value;
+            const unlock_a_user = document.getElementById('unlock_a_user').value;
             const unlockTime = parseInt(document.getElementById('unlock_time').value);
             const denyValue = parseInt(document.getElementById('deny_value').value);
+            
+            fetchData(action, user, unlock_a_user, unlockTime, denyValue);
 
             if (action.startsWith('sshd_')) {
                 fetchDaemonData(action.replace('sshd_', ''), 'sshd');
@@ -216,6 +221,7 @@
                 } else {
                     document.getElementById('output').innerText = 'Error: deny_value must be an integer';
                 }
+
             } else {
                 fetchData(action, user);
             }
@@ -226,14 +232,14 @@
     <h1>PAM FAILLOCK WEB API</h1>
     <div class="button-group">
         <div class="column">
-            <div class="section-title">PAM files</div>
+            <div class="section-title">Lockout status and values</div>
             <div class="action-group">
-                <button class="btn btn-show" onclick="handleAction('show_faillock_all_users')">Show faillock for All Users</button>
+                <button class="btn btn-show" onclick="handleAction('show_last_locked_user')">Show last locked user</button>
             </div>
             <div class="action-group">
-                <label for="user">Type a username to check faillock status:</label>
+                <label for="user">Type a username to check all lockouts:</label>
                 <input type="text" id="user" name="user">
-                <button class="btn btn-show" onclick="handleAction('show_faillock_specific_user')">Show faillock for Specific User</button>
+                <button class="btn btn-show" onclick="handleAction('show_all_user_lockouts')">Show all locked entries for user</button>
             </div>
             <div class="action-group">
                 <button class="btn btn-show" onclick="handleAction('show_unlock_time')">Show Unlock Time</button>
@@ -255,7 +261,7 @@
             </div>
         </div>
         <div class="column">
-            <div class="section-title">Actions</div>
+            <div class="section-title">Set Values</div>
             <div class="action-group">
                 <button class="btn btn-action" onclick="handleAction('unlock')">Set lock time value</button>
                 <input type="number" id="unlock_time" name="unlock_time" placeholder="Unlock time (integer)">
@@ -264,6 +270,12 @@
                 <button class="btn btn-action" onclick="handleAction('deny')">Set failed attempts value</button>
                 <input type="number" id="deny_value" name="deny_value" placeholder="Deny value (integer)">
             </div>
+            <div class="section-title">Unlock user</div>
+			<div class="action-group">
+				<label for="unlock_a_user">Type a username to unlock:</label>
+				<input type="text" id="unlock_a_user" name="unlock_a_user">
+				<button class="btn btn-action" onclick="handleAction('unlock_user')">Unlock user</button>
+			</div>
         </div>
         <div class="column">
             <div class="section-title">SSHD Daemon</div>
@@ -287,5 +299,6 @@
     <div class="console-frame">
         <pre id="output" class="console">Output will appear here...</pre>
     </div>
+    
 </body>
 </html>
