--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,21 @@
             background-color: #f4f4f4;
             color: #333;
             text-align: center;
-            background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+            //background: linear-gradient(315deg, rgba(101,0,94,1) 3%, rgba(60,132,206,1) 38%, rgba(48,238,226,1) 68%, rgba(255,25,25,1) 98%);
+            background: linear-gradient(
+                515deg,
+                rgba(101, 0, 94, 1) 0%,          /* Start color */
+                rgba(101, 0, 94, 1) 3%,           /* Keep the first color for a bit longer */
+                rgba(60, 132, 206, 1) 15%,        /* Intermediate color */
+                rgba(60, 132, 206, 1) 25%,        /* Keep the second color for a bit longer */
+                rgba(48, 238, 226, 1) 35%,        /* Transition color */
+                rgba(48, 238, 226, 1) 45%,        /* Keep the transition color for a bit longer */
+                rgba(130, 25, 25, 1) 55%,         /* Ending color */
+                rgba(160, 115, 25, 1) 68%,         /* Keep the ending color for a bit longer */
+                rgba(180, 125, 25, 1) 78%,         /* Keep the ending color for a bit longer */
+                rgba(200, 25, 125, 1) 90%,         /* Smooth transition to the end */
+                rgba(200, 25, 125, 1) 98%          /* End color */
+            );
             animation: gradient 15s ease infinite;
             background-size: 400% 400%;
             background-attachment: fixed;
@@ -35,7 +49,7 @@
             height: 12em;
             animation: wave 10s -1s linear infinite;
             transform: translate3d(0, 0, 0);
-            opacity: 0.8;
+            opacity: 1.4;
             bottom: 0;
             left: 0;
             z-index: -1;
